# Vortex

./: .gitignore  CMakeLists.txt  LICENSE
Launcher/: CMakeLists.txt
Launcher/Sources/: main.cpp
Launcher/glfw/: glfw3.lib
Vortex/: CMakeLists.txt
Vortex/Headers/: Vortex.hpp
Vortex/Sources/: Vortex.cpp
